@@ -2,21 +2,33 @@ package org.dddjava.jig.infrastructure.javaparser.learning;
 
 import com.github.javaparser.StaticJavaParser;
 import com.github.javaparser.ast.CompilationUnit;
+import com.github.javaparser.ast.comments.Comment;
 import com.github.javaparser.ast.comments.JavadocComment;
 import com.github.javaparser.javadoc.Javadoc;
-import com.github.javaparser.javadoc.description.JavadocDescription;
-import org.junit.jupiter.api.Disabled;
+import com.github.javaparser.utils.LineSeparator;
+import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-@Disabled
+/**
+ * JavaParser の LineSeparator のテスト
+ *
+ * システム改行コードの置き換えは内部でキャッシュされるため、このテストクラスはIDEで単独実行する。
+ * テストメソッドを複数作成する場合、クラス単位での実行は改行コード置き換えが期待通りにならない可能性があるので注意すること。
+ */
 public class JavaparserLineSeparatorTest {
 
     @Test
-    void StaticJavaParserでparseすると改行コードがシステムのになる() {
+    void StaticJavaParserでparseするとJavadocの改行はシステム改行コードになる() {
+        // システム改行コードを置き換える
         System.setProperty("line.separator", "\r\n");
 
+        Assumptions.assumeTrue(LineSeparator.SYSTEM.asRawString().equals("\r\n"),
+                "Javaparser の認識している改行コードがCRLFでないためテストをスキップします。" +
+                        "先行して実行されたテストで Javaparser が使用された場合、改行コードは置き換えられません。");
+
+        // この改行コードは \n （ファイルの改行コード）になる
         var code = """
                 /**
                  * 複数行の
@@ -28,45 +40,25 @@ public class JavaparserLineSeparatorTest {
                 """;
         CompilationUnit sut = StaticJavaParser.parse(code);
 
-        var comment = sut.getAllComments().get(0);
+        Comment comment = sut.getAllComments().getFirst();
 
-        // commentのStringは改行コード\nのまま
+        // Comment の改行コードはファイルの改行コードのままになる
+        // ファイルの改行コードに左右されることを認識しておく必要がある
         String commentAsText = comment.asString();
-        assertFalse(commentAsText.contains("\r\n"));
+        assertFalse(commentAsText.contains("\r\n"), "Comment の改行コードにシステム改行コードは入っていない");
 
-        // asJavadocCommentはthisかえしてるだけ
+        // asJavadocComment は this を返してるだけなので変わらない
         JavadocComment javadocComment = comment.asJavadocComment();
         assertSame(comment, javadocComment);
 
-        // これが戦犯
+        // JavadocComment -> Javadoc の変換
+        // この中で JavadocParser を使ってパースしている。
+        // JavadocParser はコメントをパースする際に改行コードを除去し、
+        // description として再構築する際に LineSeparator.SYSTEM を使って連結している。
+        // そのためこの時点でコードとして記述された改行コードは失われる。
         Javadoc javadoc = javadocComment.parse();
 
-        // javadoc.toText() の中で LineSeparator.SYSTEM を使って連結している。
-        // ここでも入るが、javadocをつくるときにdescriptionの段階で \r\n は入っている。
         String javadocText = javadoc.toText();
-        assertTrue(javadocText.contains("\r\n"));
-
-        // javadoc.toText() のなかで description.toText() 呼んでるのでこれはこうなる。
-        JavadocDescription description = javadoc.getDescription();
-
-        String descriptionText = description.toText();
-        assertTrue(descriptionText.contains("\r\n"));
-    }
-
-    @Test
-    void JavadocParserでparseすると改行コードがシステムのになる() {
-        System.setProperty("line.separator", "\r\n");
-
-        String javadocCode = """
-                /**
-                 * this
-                 * is
-                 * javadoc
-                 */
-                """;
-        var javadoc = StaticJavaParser.parseJavadoc(javadocCode);
-
-        var descriptionText = javadoc.getDescription().toText();
-        assertTrue(descriptionText.contains("\r\n"));
+        assertTrue(javadocText.contains("\r\n"), "Javadoc.toText() の改行コードはシステム改行コードになっている");
     }
 }
